--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,19 @@
     "update-browserslist": "npx update-browserslist-db@latest"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/material": "^7.3.7",
+    "@mui/x-date-pickers": "^8.27.0",
     "@react-oauth/google": "^0.12.1",
     "@uiw/react-json-view": "^2.0.0-alpha.37",
     "axios": "^1.7.9",
     "caniuse-lite": "^1.0.30001731",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.19",
     "emoji-picker-react": "^4.13.3",
     "jwt-decode": "^4.0.0",
     "localstorage-encrypt": "^1.1.0",
